@@ -18,6 +18,8 @@ version 0.6.13 - currently available as snapshot
   - NEW: add controlledRandomMating and controlledBinomialSelection which
          implement a quicker alternative to controlledMating. 
   - CHG: simuComplexDisease.py has been re-written.
+  - NEW: add TurnOnDebugWithName(name) and the ability to set SIMUDEBUG
+         to turn on certain debug mode.
          
 
 version 0.6.12 - (Rev 186) - Feb 18, 2006 
